syntax = "proto3";

package pb;

option go_package = "github.com/e-commerce/pb";

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string product_image = 4; // URL from Cloudinary
  double price = 5;
  int64 stock_quantity = 6;
  int64 category_id = 7;
}

message ProductInfo {
  string name = 1;
  string description = 2;
  int64 stock_quantity = 3;
  int64 category_id = 4;
  double price = 5;
}

message ImageChunk {
  bytes data = 1;
}

// for unary rpc
// message ProductImage {
//   bytes data = 1;
//   string content_type = 2; // MIME type e.g., "image/jpeg"
//   string filename = 3;     // Original filename
// }