syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_create_product.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/e-commerce/pb";

service Ecommerce {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
    };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "API to create a new user"
      summary: "Create new user"
        };
 }

    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
    };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "API to login user"
      summary: "login the user"
        };
    }

    rpc CreateProduct(stream CreateProductRequest) returns (CreateProductResponse) {
        option (google.api.http) = {
            post: "/v1/create_product"
            body: "*"
    };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "API to create a new product"
      summary: "only admins are able to create a new product"
        };
    }
}

// for swagger documentation improvement
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "E-Commerce App"
    version: "1.0"
    contact: {
      name: "kratos069"
      url: "https://github.com/kratos069"
      email: "dummy@email.com"
    };
  };
};